# cer-sim

R1-SIM_urdf/: cer.urdf
R1SN00x_urdf/R1SN000/: cer.urdf
R1SN00x_urdf/R1SN001/: cer.urdf
R1SN00x_urdf/R1SN002/: cer.urdf
R1SN00x_urdf/R1SN003/: cer.urdf
colcon_ws/src/cer_description/: CMakeLists.txt
colcon_ws/src/cer_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
colcon_ws/src/cer_moveit2/config/: SIM_CER_ROBOT.ros2_control.xacro  SIM_CER_ROBOT.srdf  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
colcon_ws/src/cer_moveit2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
colcon_ws/src/cer_moveit2_left_no_hand/: .setup_assistant  CMakeLists.txt  package.xml
colcon_ws/src/cer_moveit2_left_no_hand/config/: SIM_CER_ROBOT.ros2_control.xacro  (+6 more)
colcon_ws/src/cer_moveit2_pos_vel/: .setup_assistant  CMakeLists.txt  package.xml
colcon_ws/src/cer_moveit2_wizard/: .setup_assistant  CMakeLists.txt  package.xml
colcon_ws/src/cer_moveit2_wizard/config/: SIM_CER_ROBOT.srdf  SIM_CER_ROBOT.urdf.xacro  joint_limits.yaml  moveit_controllers.yaml
colcon_ws/src/cer_moveit2_wizard/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
colcon_ws/src/cer_rviz2/: package.xml
gazebo/cer/: cer.xml
gazebo/cer_no_collisions_20m/: cer.xml
(+32 files in other folders)
